# lab_oop_3

./: CMakeLists.txt  README.md  lab3
Google_Tests/: CMakeLists.txt
Google_Tests/tests/: figureArray_tests.cpp
include/: Figure.h  figureArray.h  rectangle.h  square.h
src/: CMakeLists.txt  Figure.cpp  figureArray.cpp  main.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
